Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-3317

Assert in flatmodel when doing a build

XMLWordPrintable

      Process: Qt Creator [72181]
      Identifier: com.nokia.qtcreator
      Version: 2.1.81 (2.1.81)
      Code Type: X86-64 (Native)
      Parent Process: launchd [32421]

      Date/Time: 2010-12-07 14:01:36.525 +0100
      OS Version: Mac OS X 10.6.5 (10H574)
      Report Version: 6

      Exception Type: EXC_CRASH (SIGABRT)
      Exception Codes: 0x0000000000000000, 0x0000000000000000
      Crashed Thread: 0 Dispatch queue: com.apple.main-thread

      Application Specific Information:
      abort() called

      Thread 0 Crashed: Dispatch queue: com.apple.main-thread
      0 libSystem.B.dylib 0x00007fff87837616 __kill + 10
      1 libSystem.B.dylib 0x00007fff878d7cca abort + 83
      2 QtCore 0x00000001000d6a35 qt_message_output(QtMsgType, char const*) + 117
      3 QtCore 0x00000001000d6c17 qt_message(QtMsgType, char const*, __va_list_tag*) + 183
      4 QtCore 0x00000001000d6dda qFatal(char const*, ...) + 170
      5 libProjectExplorer_debug.dylib 0x0000000116b64656 ProjectExplorer::Internal::FlatModel::added(ProjectExplorer::FolderNode*, QList<ProjectExplorer::Node*> const&) + 220 (projectmodels.cpp:544)
      6 libProjectExplorer_debug.dylib 0x0000000116b64d8a ProjectExplorer::Internal::FlatModel::filesAdded() + 90 (projectmodels.cpp:783)
      7 libProjectExplorer_debug.dylib 0x0000000116be12c4 ProjectExplorer::Internal::FlatModel::qt_metacall(QMetaObject::Call, int, void**) + 444 (moc_projectmodels.cpp:105)
      8 QtCore 0x000000010012cd66 QMetaObject::activate(QObject*, QMetaObject const*, int, void**) + 710
      9 libProjectExplorer_debug.dylib 0x0000000116bdf77e ProjectExplorer::NodesWatcher::filesAdded() + 38 (moc_projectnodes.cpp:427)
      10 libProjectExplorer_debug.dylib 0x0000000116b4fea0 ProjectExplorer::ProjectNode::addFileNodes(QList<ProjectExplorer::FileNode*> const&, ProjectExplorer::FolderNode*) + 1104 (projectnodes.cpp:524)
      11 ...4ProjectManager_debug.dylib 0x000000011de9c32b Qt4ProjectManager::Internal::Qt4ProFileNode::updateUiFiles() + 4785 (qt4nodes.cpp:1842)
      12 ...4ProjectManager_debug.dylib 0x000000011de9cf1b Qt4ProjectManager::Internal::Qt4ProFileNode::buildStateChanged(ProjectExplorer::Project*) + 107 (qt4nodes.cpp:1296)
      13 ...4ProjectManager_debug.dylib 0x000000011e0883dc Qt4ProjectManager::Internal::Qt4ProFileNode::qt_metacall(QMetaObject::Call, int, void**) + 124 (moc_qt4nodes.cpp:191)
      14 QtCore 0x000000010012cd66 QMetaObject::activate(QObject*, QMetaObject const*, int, void**) + 710
      15 libProjectExplorer_debug.dylib 0x0000000116bd4ce1 ProjectExplorer::BuildManager::buildStateChanged(ProjectExplorer::Project*) + 65 (moc_buildmanager.cpp:134)
      16 libProjectExplorer_debug.dylib 0x0000000116acae23 ProjectExplorer::BuildManager::decrementActiveBuildSteps(ProjectExplorer::Project*) + 167 (buildmanager.cpp:517)
      17 libProjectExplorer_debug.dylib 0x0000000116accc3b ProjectExplorer::BuildManager::nextBuildQueue() + 419 (buildmanager.cpp:345)
      18 libProjectExplorer_debug.dylib 0x0000000116bd4eb4 ProjectExplorer::BuildManager::qt_metacall(QMetaObject::Call, int, void**) + 464 (moc_buildmanager.cpp:116)
      19 QtCore 0x000000010012cd66 QMetaObject::activate(QObject*, QMetaObject const*, int, void**) + 710
      20 QtCore 0x0000000100152647 QFutureWatcherBase::event(QEvent*) + 119
      21 QtGui 0x00000001004737bd QApplicationPrivate::notify_helper(QObject*, QEvent*) + 189
      22 QtGui 0x000000010047a11e QApplication::notify(QObject*, QEvent*) + 2094
      23 QtCore 0x000000010012641c QCoreApplication::notifyInternal(QObject*, QEvent*) + 124
      24 QtCore 0x0000000100213fcb QCoreApplicationPrivate::sendPostedEvents(QObject*, int, QThreadData*) + 731
      25 com.apple.CoreFoundation 0x00007fff85b5d401 __CFRunLoopDoSources0 + 1361
      26 com.apple.CoreFoundation 0x00007fff85b5b5f9 __CFRunLoopRun + 873
      27 com.apple.CoreFoundation 0x00007fff85b5adbf CFRunLoopRunSpecific + 575
      28 com.apple.HIToolbox 0x00007fff8253a91a RunCurrentEventLoopInMode + 333
      29 com.apple.HIToolbox 0x00007fff8253a71f ReceiveNextEventCommon + 310
      30 com.apple.HIToolbox 0x00007fff8253a5d8 BlockUntilNextEventMatchingListInMode + 59
      31 com.apple.AppKit 0x00007fff82ac4e64 _DPSNextEvent + 718
      32 com.apple.AppKit 0x00007fff82ac47a9 -[NSApplication nextEventMatchingMask:untilDate:inMode:dequeue:] + 155
      33 com.apple.AppKit 0x00007fff82a8a48b -[NSApplication run] + 395
      34 QtGui 0x000000010042ea94 QEventDispatcherMac::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) + 1588
      35 QtCore 0x0000000100212934 QEventLoop::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) + 68
      36 QtCore 0x0000000100212c54 QEventLoop::exec(QFlags<QEventLoop::ProcessEventsFlag>) + 180
      37 QtCore 0x000000010021427c QCoreApplication::exec() + 188
      38 com.nokia.qtcreator 0x000000010000b03b main + 9725 (main.cpp:356)
      39 com.nokia.qtcreator 0x0000000100005260 start + 52

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            dt Daniel Teske
            con Eike Ziller
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes