ProjectExplorer, FlatModel: Crash fix

sortNodes only ensured a partial ordering, we need a total ordering.

Reviewed-By: con

Task-Nr: QTCREATORBUG-3317
Task-Nr: QTCREATORBUG-3302